# causalAssembly

./: .gitignore  .lintr  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  allowed_licenses.txt  allowed_packages.txt  index.html  licenses.txt  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: publish_doku.yml  test_package.yml
benchmarks/: README.md  requirements.txt  run.py  utils.py
causalAssembly/: __init__.py  dag.py  dag_utils.py  drf_fitting.py  metrics.py  models_dag.py  models_fcm.py  pdag.py
data/data_sets/n_500_synthdata/: assembly_Station1.csv  assembly_Station2.csv  assembly_Station3.csv  assembly_Station4.csv  assembly_Station5.csv  assembly_line_500.csv
data/ground_truth/: ground_truth.json
docs/: documentation.md  index.md
documentation/: index.html
tests/: test_dag.py  test_metrics.py  test_models.py  test_models_dag.py  test_models_fcm.py  test_pdag.py
