[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "causalAssembly"
requires-python = ">3.10.0"
authors = [
    { name = "Konstantin Göbler", email = "konstantin.goebler@de.bosch.com" },
]
description = "Generating production line data with available causal ground truth"
dynamic = ["version"]
dependencies = [
    "sympy",
    "networkx",
    "scipy",
    "numpy",
    "pandas",
    "matplotlib",
    "rpy2",
    "requests",
]
readme = "README.md"
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/boschresearch/causalAssembly"
Documentation = "https://boschresearch.github.io/causalAssembly/"
Repository = "https://github.com/boschresearch/causalAssembly"
Issues = "https://github.com/boschresearch/causalAssembly/issues"
Changelog = "https://github.com/boschresearch/causalAssembly/blob/main/CHANGELOG.md"


[project.optional-dependencies]
dev = [
    "mike",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pip-licenses",
    "pip-tools",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "uv",
]

[tool.setuptools.packages.find]
include = ["causalAssembly*"]


[tool.setuptools.dynamic]
version = { file = "VERSION" }


[tool.ruff]

exclude = [
    ".github",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    #"notebooks/",
]

extend-include = ["*.ipynb"]

line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "UP",  # pyupgrade
    "D",   # pydocstyle
    "PL",  # pylint
    "TD",  # flake8-todos
    "C90", # McCabe
]

ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 27

[tool.ruff.lint.pylint]
max-args = 15
max-branches = 30
max-statements = 100

[tool.pytest.ini_options]
addopts = "--cov=gresit --cov-fail-under=60"
testpaths = ["tests"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
